update todo and changelog

--- a/Changelog
+++ b/Changelog
@@ -1,10 +1,9 @@
-11.3:
-	Update inter/SCORE, inter/SCORE_TRAIN, with manpages.
-	Improve worst-case performance for inter/_NF-ORDER
-
 11.2:
 	improve inter/{UPPER,LOWER} (include mapping in SpecialCasing.txt)
 	add inter/CASEFOLD (C/F in CASEFOLD.txt)
+	Update inter/SCORE, inter/SCORE_TRAIN, with manpages.
+	Improve worst-case performance for inter/_NF-ORDER
+	Unify map file structure on all platform
 
 11.1:
 	Correct algorithm for unicode normalization
