--- a/Changelog
+++ b/Changelog
@@ -5,6 +5,7 @@
 	Improve worst-case performance for inter/_NF-ORDER
 	Unify map file structure on all platform
 	add inter/REPLACE and alias inter/NOBOM to inter/REPLACE#01FEFF
+	Update documentations
 
 11.1:
 	Correct algorithm for unicode normalization
