chase codecs rename

--- a/bsdconv.tex
+++ b/bsdconv.tex
@@ -267,7 +267,7 @@ basicstyle=\ttfamily
 						01 & Unicode & Most decoder & Most encoder\\
 						02 & CNS11643\footnotemark[1] & CNS11643 & CNS11643\\
 						03 & Byte & BYTE; ESCAPE & BYTE; ESCAPE\#FOR=BYTE\\
-						04 & Chinese components & inter/ZH\_DECOMP & inter/ZH\_COMP\\
+						04 & Chinese components & inter/ZH-DECOMP & inter/ZH-COMP\\
 						1B & ANSI control sequence & ANSI-CONTROL & -\\
 						\hline
 					\end{tabular}
