--- a/bsdconv.tex
+++ b/bsdconv.tex
@@ -264,7 +264,7 @@ basicstyle=\ttfamily
 						ID & Description & Provider(from) & Consumer(to)\\
 						\hline
 						00 & Bsdconv special characters & BSDCONV\_KEYWORD & BSDCONV\_KEYWORD\\
-						01 & Unicode & Most decoder & Most encoder\\
+						01 & Unicode & Most decoders & Most encoders\\
 						02 & CNS11643\footnotemark[1] & CNS11643 & CNS11643\\
 						03 & Byte & BYTE; ESCAPE & BYTE; ESCAPE\#FOR=BYTE\\
 						04 & Chinese components & inter/ZH-DECOMP & inter/ZH-COMP\\
