--- a/Changelog
+++ b/Changelog
@@ -6,6 +6,8 @@
 	Unify map file structure on all platform
 	add inter/REPLACE and alias inter/NOBOM to inter/REPLACE#01FEFF
 	Update documentations
+	support DESTDIR in makefile
+	be case-sensitive for codec arguments (for bsdconv-opencc)
 
 11.1:
 	Correct algorithm for unicode normalization
