--- a/modules/to/PASS.man
+++ b/modules/to/PASS.man
@@ -9,8 +9,7 @@ ARGUMENT
 	MARK
 		DESC	Add "MARK" flag
 	FOR
-		FORMAT	ENUM{UNICODE,1,CNS11643,2,BYTE,3,ANSI,1B}
-		DESC	Output type whitelist
+		FORMAT	Filter
 
 EXAMPLE
 	#pass through packets queue
