--- a/Changelog
+++ b/Changelog
@@ -12,6 +12,7 @@
 	add from/_HKSCS{1999,2001,2004}
 	add from/_BIG5{E,-2003,-ETEN}
 	add inter/ZH-BONUS and inter/ZH-BONUS-PHRASE
+	add filter infrastructure
 
 11.1:
 	Correct algorithm for unicode normalization
