--- a/Changelog
+++ b/Changelog
@@ -1,7 +1,7 @@
 11.3:
 	deprecate bsdconv_codecs_list() by bsdconv_modules_list(), old symbol will be remained until next major release
 	deprecate bsdconv_codec_check() by bsdconv_module_check(), old symbol will be remained until next major release
-	add filter/{HIRAGANA,KATAKANA,HANGUL,CYRILLIC}
+	add filter/{HIRAGANA,KATAKANA,HANGUL,CYRILLIC,ROMAN}
 
 11.2:
 	improve inter/{UPPER,LOWER} (include mapping in SpecialCasing.txt)
