--- a/modules/inter/STRINGS.man
+++ b/modules/inter/STRINGS.man
@@ -2,9 +2,10 @@ DESC
 	Similiar to STRINGS(1), but for filter characters with specified filter
 
 ARGUMENT
-	$filter
+	FOR
+		FORMAT	FILTER
 
 EXAMPLE
-	> echo abd測試efg功能，hij | bsdconv utf-8:strings#cjk:utf-8
+	> echo abd測試efg功能，hij | bsdconv utf-8:strings#for=cjk:utf-8
 	測試
 	功能
