--- a/modules/inter/STRINGS.man
+++ b/modules/inter/STRINGS.man
@@ -6,8 +6,20 @@ ARGUMENT
 		FORMAT	FILTER
 	MIN-LEN
 		FROMAT INTEGER
+	SEP
+		DESC Separator
+		DEFAULT 010A
+		FORMAT	DataList
 
 EXAMPLE
 	> echo abd測試efg功能，hij | bsdconv utf-8:strings#for=cjk:utf-8
 	測試
 	功能
+
+	> echo aㄎabㄎabcㄉabcd|bsdconv utf-8:strings#min-len=3:utf-8
+	abc
+	abcd
+
+	> echo aㄎabㄎabcㄉabcd | bsdconv 'utf-8:strings#min-len=3&sep=013b.010a:utf-8'
+	abc;
+	abcd;
