--- a/Changelog
+++ b/Changelog
@@ -6,6 +6,7 @@
 	add scorer infrastructure
 	add scorer/{CJK,LATIN1}
 	add output mode BSDCONV_PASS
+	add zsh auto completion script
 
 11.2:
 	improve inter/{UPPER,LOWER} (include mapping in SpecialCasing.txt)
